<?xml version="1.0"?>
<package format="3">
  <name>touchlab_msgs</name>
  <version>0.0.0</version>
  <description>The touchlab_msgs package for ROS1</description>
  <maintainer email="ruoshi@touchlab.io">Ruoshi Wen</maintainer>
  <license>TouchlabLimited</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>

</package>
